--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- CRITIQUE : Cette ligne manquante causait l'écran noir -->
+    <script type="module" src="./index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
